Texture for silver ingot

--- a/src/main/resources/assets/kentymod/lang/en_us.json
+++ b/src/main/resources/assets/kentymod/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.kentymod.silver": "Silver",
+  "item.kentymod.silver_ingot": "Silver Ingot",
 
   "itemGroup.kentymod" : "Kenty Mod Items"
 }
