--- a/src/main/resources/assets/kentymod/lang/ru_ru.json
+++ b/src/main/resources/assets/kentymod/lang/ru_ru.json
@@ -1,5 +1,6 @@
 {
-  "item.kentymod.silver": "Серебро",
+  "item.kentymod.silver_ingot": "Слиток Серебра",
 
   "itemGroup.kentymod" : "Предметы Кентов"
+
 }
