Added silver block, block init, assets tree updated

--- a/src/main/resources/assets/kentymod/lang/en_us.json
+++ b/src/main/resources/assets/kentymod/lang/en_us.json
@@ -6,5 +6,9 @@
   "item.kentymod.silver_leggings": "Silver Leggings",
   "item.kentymod.silver_boots": "Silver Boots",
 
+  "block.kentymod.block_of_silver": "Block of Silver",
+
   "itemGroup.kentymod" : "Kenty Mod Items"
+
+
 }
