--- a/src/main/resources/assets/kentymod/lang/ru_ru.json
+++ b/src/main/resources/assets/kentymod/lang/ru_ru.json
@@ -6,6 +6,9 @@
   "item.kentymod.silver_leggings": "Серебряные Поножи",
   "item.kentymod.silver_boots": "Серебряные Ботинки",
 
+  "block.kentymod.block_of_silver": "Блок Серебра",
+
+
   "itemGroup.kentymod" : "Предметы Кентов"
 
 }
