Add Silver Tools with rand textures and specifications

--- a/src/main/resources/assets/kentymod/lang/en_us.json
+++ b/src/main/resources/assets/kentymod/lang/en_us.json
@@ -5,6 +5,11 @@
   "item.kentymod.silver_chestplate": "Silver Chestplate",
   "item.kentymod.silver_leggings": "Silver Leggings",
   "item.kentymod.silver_boots": "Silver Boots",
+  "item.kentymod.silver_sword": "Silver Sword",
+  "item.kentymod.silver_axe": "Silver Axe",
+  "item.kentymod.silver_pickaxe": "Silver Pickaxe",
+  "item.kentymod.silver_shovel": "Silver Shovel",
+  "item.kentymod.silver_hoe": "Silver Hoe",
 
   "itemGroup.kentymod" : "Kenty Mod Items"
 }
